--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3307/identity_service
+    driverClassName: com.mysql.jdbc.Driver
     username: root
     password: root
   jpa:
